Some changes applied

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
-    
+    <p class="text-3xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus laudantium blanditiis rem ullam culpa consequatur odio labore adipisci dolores, et totam consectetur odit. Quasi, deleniti repellendus? Nobis reiciendis amet neque.</p>
   </body>
 </html>
