--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
       type="text/css"
     />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Custom CSS -->
+     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    <p class="text-3xl">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus laudantium blanditiis rem ullam culpa consequatur odio labore adipisci dolores, et totam consectetur odit. Quasi, deleniti repellendus? Nobis reiciendis amet neque.</p>
+    <section class="home">
+
+    </section>
+    <section class="play-ground">
+
+    </section>
+    <section class="score">
+      
+    </section>
   </body>
 </html>
